[main] resolved layout issues of items input of the load entry form where inputs does not align correctly with the input headers

--- a/src/components/add-item-input/AddItemInput.scss
+++ b/src/components/add-item-input/AddItemInput.scss
@@ -1,4 +1,9 @@
 .add-item-input {
+    display: grid;
+    grid-template-columns: 4fr 1fr 1fr;
+    grid-template-rows: 35px;
+    align-items: center;
+
 
     input {
         margin: 0 25px 10px 0;
@@ -23,25 +28,31 @@
 
     &__name {
         border: none;
-        width: 280px;
+        width: 90%;
         text-transform: capitalize;
     }
 
     &__quantity {
         border: none;
-        width: 30px;
+        width: 80%;
         text-align: center;
     }
 
     &__remove {
+        place-self: center;
         background-color: white;
         border: none;
         border-radius: 100%;
-        margin-left: 5px;
         height: 25px;
         width: 25px;
         color: red;
         font-weight: 500;
         cursor: pointer;
+
+        &-container {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
     }
 }
