--- a/src/components/load-entry-form/LoadEntryForm.scss
+++ b/src/components/load-entry-form/LoadEntryForm.scss
@@ -7,18 +7,13 @@
 
     &__items {
         &-header {
+            display: grid;
+            grid-template-columns: 4fr 1fr 1fr;
             margin-bottom: 7px;
 
-            &-name {
-                display: inline-block;
-                margin-right: 50px;
-                width: 270px;
-            }
-
-            &-quantity {
-                display: inline-block;
-                margin-right: 50px;
-                width: 25px;
+            &-remove {
+                width: 100%;
+                text-align: center;
             }
         }
 
